<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Zaworat</string>
	<string name="txt_header_info">Zaworat Plastic Factory</string>
	<string name="action_settings">Settings</string>
  
	<!--     Dashboard -->
	<string name="db_notification">Zaworat Balance</string>
	<string name="db_addlist">Customer Balance</string>
	<string name="db_short_message">Performance by Month</string>
	<string name="db_language">Stock Balance</string>
	<string name="db_download">Performance by Branch</string>
	<string name="db_about">About</string>
	<string name="db_important_info">Important Info</string>
	<string name="from_date">From Date:</string>
	<string name="to_date">To Date:</string>
	<string name="txt_select">Select</string>
	<string name="display_report">Generate</string>
	<string name="txt_branch">Branch</string>
	
	<string-array name="branch_list">
        <item>Select Branch</item>
        <item>Akaki</item>
        <item>Kality</item>
        <item>H.Office</item>
    </string-array>
</resources>