<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#2D58C6"
    android:orientation="vertical" >

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
	    <TextView 
		    android:layout_width="80dp"
		    android:layout_height="wrap_content"
		    android:textColor = "#FFFFFF"
		    android:text="@string/from_date"/>

	    <EditText 
		    android:layout_width="150dp"
		    android:layout_height="40dp"
		    android:background = "@android:drawable/edit_text"
		    android:editable="false"
	        android:id="@+id/from_date"/>
	    
        <Button
            android:id="@+id/btn_select_from"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/txt_select"/> 	    
    </LinearLayout>
  
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">    
	    <TextView 
		    android:layout_width="80dp"
		    android:layout_height="wrap_content"
		    android:textColor = "#FFFFFF"
		    android:text="@string/to_date"/>
	    
	    <EditText 
		    android:layout_width="150dp"
		    android:layout_height="40dp"
		    android:background = "@android:drawable/edit_text"
		    android:editable="false"
	        android:id="@+id/to_date"/> 
	        
        <Button
            android:id="@+id/btn_select_to"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/txt_select"/> 	    
    </LinearLayout>
            
    <Button
        android:id="@+id/generate_report"
        style="@style/Button"
        android:onClick="runReport"
        android:text="@string/display_report" />
        
    <WebView
        android:id="@+id/message_webview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>